--- a/ManagementSystem_03/Views/Tables/Index.cshtml
+++ b/ManagementSystem_03/Views/Tables/Index.cshtml
@@ -9,43 +9,58 @@
 <h2>Tables</h2>
 
 <ul>
-	@foreach (var tableName in Model.TableNames)
-	{
-		<li><a asp-action="Index" asp-route-tableName="@tableName.Name">@tableName.Name</a></li>
-	}
+    @foreach (var tableName in Model.TableNames)
+    {
+        <li><a asp-action="Index" asp-route-tableName="@tableName.Name">@tableName.Name</a></li>
+    }
 </ul>
 
 @if (Model.TableData != null)
 {
-	<h2>Data from @ViewBag.SelectedTableName</h2>
-		if (Model.TableData.Data.Count > 0) 
-		{
-			<table>
-				<thead>
-					<tr>
-						@foreach (var column in Model.TableData.Data.FirstOrDefault())
-						{
-							<th style="padding: 10px;">@column.Key</th>
-						}
-					</tr>
-				</thead>
-				<tbody>
-					@foreach (var row in Model.TableData.Data)
-					{
-						<tr>
-							@foreach (var column in row)
-							{
-								<td style="padding: 10px;">@column.Value</td>
-							}
-							<td>
-								<button>ערוך</button>
-								<button class="delete-button" data-id="@row["theIndex"]" data-table-name="@ViewBag.SelectedTableName">מחק</button>
-							</td>
-						</tr>
-					}
-				</tbody>
-			</table>
-		}
-	<script src="~/js/deleteButtons.js"></script>
+    <h2>Data from @ViewBag.SelectedTableName</h2>
+    @if (Model.TableData.Data.Count > 0)
+    {
+        <table>
+            <thead>
+                <tr>
+                    @foreach (var column in Model.TableData.Data.FirstOrDefault())
+                    {
+                        <th style="padding: 10px;">@column.Key</th>
+                    }
+                    <th>פעולות</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var row in Model.TableData.Data)
+                {
+                    <tr>
+                        @foreach (var column in row)
+                        {
+                            <td style="padding: 10px;">@column.Value</td>
+                        }
+                        <td>
+                            <button type="button" class="edit-btn" data-row-index="@Model.TableData.Data.IndexOf(row)">ערוך</button>
+                            <button class="delete-button" data-id="@row["theIndex"]" data-table-name="@ViewBag.SelectedTableName">מחק</button>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+    else
+    {
+        <p>אין נתונים להצגה בטבלה זו.</p>
+    }
+    <script src="~/js/deleteButtons.js"></script>
 
+    <div id="editFormContainer" style="display:none;">
+    </div>
+}
+
+
+@section scripts {
+    <script>
+        var selectedTableName = '@Html.Raw(ViewBag.SelectedTableName)';
+    </script>
+    <script src="~/js/editTable.js"></script>
 }
